# Sunshine

./: .gitmodules  crowdin.yml
.github/workflows/: CI.yml
cmake/dependencies/: common.cmake
cmake/prep/: options.cmake
cmake/targets/: common.cmake
src/: input.cpp
tests/: CMakeLists.txt  test_main.cpp
